# ICM_BIDEM

./: BIMODE.f90  Build_SLR_input.py  CMP_BI.f90  CMakeLists.txt  MP2023_BIDEM_bayside_retreat_rates.xlsx  README.md  interpolate_to_fixed_for_ICM.py  mod_global.f90  mod_util.f90  readme.txt
